--- a/5.5/Dockerfile
+++ b/5.5/Dockerfile
@@ -1,5 +1,5 @@
 FROM ubuntu:trusty
-MAINTAINER Fernando Mayo <fernando@tutum.co>, Feng Honglin <hfeng@tutum.co>
+MAINTAINER Honglin <hfeng@tutum.co>
 
 # Add MySQL configuration
 ADD my.cnf /etc/mysql/conf.d/my.cnf
@@ -29,5 +29,5 @@ ENV MYSQL_USER=admin \
 # Add VOLUMEs to allow backup of config and databases
 VOLUME  ["/etc/mysql", "/var/lib/mysql"]
 
-EXPOSE 3306
+EXPOSE 80 3306
 CMD ["/run.sh"]
